# hls-downloader

./: Cargo.toml  README.md  build.rs  package-lock.json  package.json  rollup.config.js
src/: App.svelte  adder.svelte  download_list.svelte  interface.ts  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
