[package]
name = "hls_downloader"
version = "0.4.0"
authors = ["Choi Jae Yong <jayong93@gmail.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
reqwest = {version="0.10.*", features=["json"]}
futures="0.3.1"
clap = "*"
regex = "*"
serde = "*"
indexmap = {version=">= 1.0.0", features=["std"]}
serde_derive = "*"
serde_json = "*"
lazy_static = "*"
percent-encoding = "*"
tokio = {version="0.2.*", features=["rt-threaded", "macros"]}
num_cpus = "*"
indicatif = ">= 0.11.0"
itertools = "*"
anyhow = "1.0.19"
gstreamer = "0.15.2"
gstreamer-app = "0.15.0"
bytes = "0.5.4"
m3u8-rs = "*"
url = "*"
