[package]
name = "hls_downloader"
version = "0.4.0"
authors = ["Choi Jae Yong <jayong93@gmail.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
reqwest = {version="0.11.*", features=["json"]}
futures="0.3.1"
clap = "*"
regex = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
lazy_static = "*"
percent-encoding = "*"
tokio = {version="1.0.*", features=["rt-multi-thread", "macros"]}
num_cpus = "*"
indicatif = ">= 0.11.0"
itertools = "*"
anyhow = "1.0.19"
gstreamer = "0.15.2"
gstreamer-app = "0.15.0"
bytes = "*"
m3u8-rs = "*"
url = "*"
