[package]
name = "hls_downloader"
version = "0.1.1"
description = "Downloads videos from HLS media files lists"
authors = ["Jaeyong Choi"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
reqwest = {version="0.11.*", features= ["json"] }
futures="0.3.1"
regex = "*"
lazy_static = "*"
tokio = {version="1.*", features= ["rt-multi-thread", "macros"] }
gstreamer = "*"
gstreamer-app = "*"
bytes = "*"
m3u8-rs = "*"
url = "*"
rfd = "*"
log = "*"
pretty_env_logger = "*"
clap = {version="3.*", features = ["derive"]}
indicatif = "*"
