[package]
name = "app"
version = "0.1.1"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-beta.4" }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-beta.8", features = ["api-all"] }
reqwest = {version="0.11.*", features= ["json"] }
futures="0.3.1"
regex = "*"
lazy_static = "*"
tokio = {version="1.*", features= ["rt-multi-thread", "macros"] }
gstreamer = "*"
gstreamer-app = "*"
bytes = "*"
m3u8-rs = "*"
url = "*"
rfd = "*"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
